# ERPManufacturing_develop

./: .pre-commit-config.yaml  README.md  pyproject.toml
tcb_manufacturing_customizations/: bales_utils.py  hooks.py  modules.txt
tcb_manufacturing_customizations/api/: api.py  asset_api.py  asset_maintenance_api.py  purchase_order_api.py
tcb_manufacturing_customizations/doc_events/: asset_maintenance_log.py  bom.py  delivery_estimate.py  delivery_note.py  job_card.py  production_plan.py  purchase_receipt.py  quality_inspection.py  sales_invoice.py  sales_order.py  stock_entry.py  stock_reconciliation.py  work_order.py
tcb_manufacturing_customizations/install/: manufacturing_settings.py
tcb_manufacturing_customizations/overrides/: delivery_note.py  production_plan.py  workorder.py
tcb_manufacturing_customizations/public/js/: asset.js  asset_maintenance_log.js  asset_repair.js  bales.js  batch.js  bom.js  delivery_estimate.js  delivery_estimate_urgent.js  delivery_note.js  freight_master.js  get_batch_qty.js  item.js  job_card.js  material_request.js  production_plan.js  purchase_order.js  purchase_receipt.js  quality_inspection.js  sales_invoice.js  sales_order.js  stock_entry.js  stock_entry_list.js  stock_reconciliation.js  work_order.js  workstation.js
tcb_manufacturing_customizations/public/js_overrides/: stock_entry.js  stock_entry_detail.js
tcb_manufacturing_customizations/tcb_manufacturing_customizations/custom/: asset.json  asset_repair.json  (+41 more)
tcb_manufacturing_customizations/utils/: item_property_utils.py  ports_data.py  stock.py  terms_cleaner.py
(+209 files in other folders)
