[project]
name = "tcb_manufacturing_customizations"
authors = [
    { name = "Rahul Dash", email = "rahul.dash@spplgroup.com" }
]
description = "TCB Manufacturing Customizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # NOTE: Frappe is installed and managed by bench
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# REQUIRED by Frappe Cloud (VERY IMPORTANT)
[tool.bench]
app_name = "tcb_manufacturing_customizations"

[tool.bench.frappe-dependencies]
frappe = ">=15,<16"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true